# PATP-3Sem

./: .gitignore
API/: .coverage  .env  README.md  docker-compose.yml  pyproject.toml
API/controlepatrimonio-api/: pom.xml
API/controlepatrimonio-api/src/main/java/com/ideau/controlepatrimonio_api/: ControlepatrimonioApiApplication.java
API/controlepatrimonio-api/src/main/java/com/ideau/controlepatrimonio_api/Listeners/: UsuarioAuditingListener.java
API/controlepatrimonio-api/src/main/java/com/ideau/controlepatrimonio_api/controller/: AuthController.java  DetalhesPatrController.java  UserController.java  controller.java
API/controlepatrimonio-api/src/main/java/com/ideau/controlepatrimonio_api/dto/: AutenticacaoDTO.java  UsuarioAlteraveisDTO.java  UsuarioPublicoDTO.java
API/controlepatrimonio-api/src/main/java/com/ideau/controlepatrimonio_api/infra/exceptions/: HTTPException.java  HTTPExceptionHandler.java
API/controlepatrimonio-api/src/main/java/com/ideau/controlepatrimonio_api/infra/security/: ConfiguracoesSeguranca.java  FiltroDeSeguranca.java  JWTService.java  TokensService.java
API/controlepatrimonio-api/src/main/java/com/ideau/controlepatrimonio_api/model/: Usuario.java
API/controlepatrimonio-api/src/main/java/com/ideau/controlepatrimonio_api/model/Auditoria/: UsuarioAudit.java
API/controlepatrimonio-api/src/main/java/com/ideau/controlepatrimonio_api/model/DetalhesPatr/: SetResp.java  (+2 more)
API/controlepatrimonio-api/src/main/java/com/ideau/controlepatrimonio_api/repositories/: AuditoriaRepository.java  CargoRepository.java  CategRepository.java  FornecRepository.java  SetRespRepository.java  UserRepository.java
API/controlepatrimonio-api/src/main/java/com/ideau/controlepatrimonio_api/services/: AuthorizationService.java  DetalhesPatrServices.java  Services.java  UserDetailsServiceImpl.java  UserServices.java
API/controlepatrimonio-api/src/main/java/com/ideau/controlepatrimonio_api/utils/: RetornaIDpeloUsername.java  Utils.java
API/controlepatrimonio-api/src/main/resources/: application.properties
API/controlepatrimonio-api/src/main/resources/db/migration/: V1__create-table-usuarios.sql
API/controlepatrimonio-api/src/test/java/com/ideau/controlepatrimonio_api/: ControlepatrimonioApiApplicationTests.java
API/migrations/: env.py
API/migrations/versions/: a2281e965496_adicionada_tabela_de_usuários.py  ee2ecb4b0e5c_adicionada_tabela_de_usuários.py
API/src/: app.py  database.py  models.py  routes.py  schemas.py  services.py
API/src/api/: app.py  schemas.py
API/src/domain/: schemas.py  services.py
API/src/infrastructure/database/: connection.py  models.py
API/src/interfaces/: routes.py
API/tests/: test_app.py  test_routes.py
(+55 files in other folders)
