[project]
name = "api"
version = "0.1.0"
description = ""
authors = [
    {name = "eduardogm22",email = "167825825+eduardogm22@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi[standard] (>=0.115.11,<0.116.0)",
    "ruff (>=0.9.9,<0.10.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "ignr (>=2.2,<3.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "invoke (>=2.2.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "*", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest-cov = "^6.0.0"

[tool.pytest.ini_options]
pythonpath = 'API'
addopts = '-p no:warnings'

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT' ]

[tool.taskipy.tasks]
run = 'fastapi dev src/app.py'
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'

pre_test = 'task lint'
test = 'pytest --cov=src -vv'
pos_test = 'coverage html'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
